--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/jajmo/Ghetto-IMDB#README",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.2",
+    "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "guid": "0.0.12",
     "mongodb": "^2.1.7",
+    "node-uuid": "^1.4.7",
     "request-promise": "^2.0.0"
   }
 }
