--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.13.4",
     "mongodb": "^2.1.7",
     "node-uuid": "^1.4.7",
+    "request": "^2.72.0",
     "request-promise": "^2.0.0"
   }
 }
